...
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pinkpanthers.pinkshelters.Controller.Registration"
        tools:showIn="@layout/activity_registration">

        <EditText
            android:id="@+id/accountUserName"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:ems="10"
...
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="336dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
...
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountUserName" />

        <EditText
            android:id="@+id/pw"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
...
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="You are:"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/user_type_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw"
            app:layout_constraintVertical_bias="0.189" />

        <Spinner
            android:id="@+id/user_type_spinner"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pw"
            app:layout_constraintVertical_bias="0.49" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type_spinner"
            app:layout_constraintVertical_bias="0.515" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="40dp"
...
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type_spinner"
            app:layout_constraintVertical_bias="0.515" />

        <TextView
            android:id="@+id/missingName"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="5dp"
...
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/missingEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/error_invalid_email"
...
            app:layout_constraintHorizontal_bias="0.082"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountUserName"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/missingUsername"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Invalid username. Needs to be at least 6 characters"
            android:textColor="@android:color/holo_red_dark"
...
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/missingPassword"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/error_invalid_password"
            android:textColor="@android:color/holo_red_dark"
...
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/missingUserType"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="132dp"
            android:layout_marginRight="132dp"
            android:layout_marginStart="16dp"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_type"
            app:layout_constraintVertical_bias="0.51" />

        <TextView
            android:id="@+id/duplicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username is not available. Please try again."
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/username"
...
